--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==5.1.4
 django-ckeditor==6.7.2
+django-ckeditor-5==0.2.15
 django-cors-headers==4.6.0
 django-filter==24.3
 django-js-asset==3.0.1
 djangorestframework==3.15.2
+idna==3.10
 Markdown==3.7
 pillow==11.0.0
+python-dotenv==1.0.1
+requests==2.32.3
 sqlparse==0.5.3
+urllib3==2.3.0
