--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 asgiref==3.8.1
+awsebcli==3.21.0
+blessed==1.20.0
+botocore==1.35.99
+Brotli==1.1.0
+cement==2.10.14
 certifi==2024.12.14
 charset-normalizer==3.4.1
+colorama==0.4.6
+dj-database-url==2.3.0
 Django==5.1.4
 django-ckeditor==6.7.2
 django-ckeditor-5==0.2.15
@@ -9,9 +16,22 @@ django-filter==24.3
 django-js-asset==3.0.1
 djangorestframework==3.15.2
 idna==3.10
+jmespath==1.0.1
 Markdown==3.7
+mysqlclient==2.2.7
+pathspec==0.10.1
 pillow==11.0.0
+psycopg2==2.9.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+PyYAML==6.0.2
 requests==2.32.3
+semantic-version==2.10.0
+setuptools==75.8.0
+six==1.17.0
 sqlparse==0.5.3
-urllib3==2.3.0
+termcolor==2.5.0
+typing_extensions==4.12.2
+urllib3==1.26.20
+wcwidth==0.2.13
+whitenoise==6.8.2
