--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.6
+cloudinary==1.42.1
 configobj==5.0.8
 cryptography==41.0.7
 dj-database-url==2.3.0
 Django==5.1.4
 django-ckeditor==6.7.2
 django-ckeditor-5==0.2.15
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.6.0
 django-filter==24.3
 django-js-asset==3.0.1
