--- a/requirements.txt
+++ b/requirements.txt
@@ -1,60 +1,22 @@
-asgiref==3.8.1
-attrs==23.2.0
-Babel==2.10.3
-bcrypt==3.2.2
-certifi==2024.12.14
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.6
-cloudinary==1.42.1
-configobj==5.0.8
-cryptography==41.0.7
-dj-database-url==2.3.0
-Django==5.1.4
-django-ckeditor==6.7.2
-django-ckeditor-5==0.2.15
+asgiref @ file:///C:/Users/dev-admin/perseverance-python-buildout/croot/asgiref_1729057877436/work
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cloudinary==1.44.1
+dj-database-url==3.0.1
+Django @ file:///C:/b/abs_732pccxzov/croot/django_1745263601709/work
+django-ckeditor-5==0.2.18
 django-cloudinary-storage==0.3.0
-django-cors-headers==4.6.0
-django-filter==24.3
-django-js-asset==3.0.1
-djangorestframework==3.15.2
-fasteners==0.18
-gunicorn==23.0.0
+django-cors-headers==4.7.0
+django-rest-framework==0.1.0
+djangorestframework==3.16.1
+dotenv==0.9.9
 idna==3.10
-Jinja2==3.1.2
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-monotonic==1.6
-oauthlib==3.2.2
-packaging==24.0
-paramiko==2.12.0
-pathspec==0.10.1
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.2.0
-psutil==5.9.8
-ptyprocess==0.7.0
-pycairo==1.25.1
-pycparser==2.22
-Pygments==2.17.2
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.1
-PyYAML==6.0.2
-requests==2.32.3
-rich==13.7.1
-semantic-version==2.10.0
-setuptools==75.8.0
+pillow==11.3.0
+python-dotenv==1.1.1
+requests==2.32.4
+setuptools==78.1.1
 six==1.17.0
-sqlparse==0.5.3
-termcolor==2.5.0
-typing_extensions==4.12.2
-urllib3==2.3.0
-whitenoise==6.8.2
+sqlparse @ file:///C:/Users/dev-admin/buildout/croot/sqlparse_1739565583021/work
+typing_extensions @ file:///C:/b/abs_0ffjxtihug/croot/typing_extensions_1734714875646/work
+urllib3==2.5.0
+wheel==0.45.1
